Risoluzione segnalazioni sonar.